@@ -98,6 +98,9 @@ bool FrmMain::initSDL(const CmdLineSetup_t &setup)
     //Initialize FreeImage
     GraphicsHelps::initFreeImage();
 
+    if(setup.allowBgInput)
+        SDL_SetHint(SDL_HINT_JOYSTICK_ALLOW_BACKGROUND_EVENTS, "1");
+
 #if defined(__ANDROID__) || (defined(__APPLE__) && (defined(TARGET_IPHONE_SIMULATOR) || defined(TARGET_OS_IPHONE)))
     // Restrict the landscape orientation only
     SDL_SetHint(SDL_HINT_ORIENTATIONS, "LandscapeLeft LandscapeRight");
